# Homomorphic-code-execution

./: CMakeLists.txt  README.md  bf_unencrypted.cpp  code.cpp  main.cpp  model.h
